This commit represents the completion of tests 1 through 7. Passage of the archive test (8) is next.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,17 @@ set(Boost_NO_BOOST_CMAKE ON)
 set(BOOST_ROOT "/opt/homebrew/opt/boost")
 set(BOOST_INCLUDEDIR "${BOOST_ROOT}/include")
 set(BOOST_LIBRARYDIR "${BOOST_ROOT}/lib")
-set(SQLite3_INCLUDE_DIR /opt/homebrew/Cellar/sqlite/3.47.0/include)
-include_directories(${BOOST_INCLUDE_DIRS} ${SQLite3_INCLUDE_DIR})
+set(SQLite3_INCLUDE_DIR /opt/homebrew/Cellar/sqlite/3.47.2/include)
+include_directories(${BOOST_INCLUDEDIR} ${SQLite3_INCLUDE_DIR})
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
 add_compile_options(-g -O0)
 
 
-find_package(Boost REQUIRED COMPONENTS filesystem date_time system program_options )
+find_package(Boost REQUIRED COMPONENTS filesystem date_time program_options )
 
-set(SQLite3_LIBRARY_DIR /opt/homebrew/Cellar/sqlite/3.47.0/lib)
+set(SQLite3_LIBRARY_DIR /opt/homebrew/Cellar/sqlite/3.47.2/lib)
 set(SQLite3_LIBRARY sqlite3.dll)
 find_package(SQLite3 REQUIRED)
 
