--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 # Use the variable PROJECT_NAME for changing the target name
+cmake_minimum_required(VERSION 3.30)
 include(FindPkgConfig)
-set(PROJECT_NAME "ScanFiles")
+#set(PROJECT_NAME "ScanFiles")
+project(ScanFiles LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(Boost_NO_SYSTEM_PATHS ON)
-set(Boost_NO_BOOST_CMAKE ON)
+#set(Boost_NO_BOOST_CMAKE ON)
 set(BOOST_ROOT "/opt/homebrew/opt/boost")
 set(BOOST_INCLUDEDIR "${BOOST_ROOT}/include")
 set(BOOST_LIBRARYDIR "${BOOST_ROOT}/lib")
-#set(SQLite3_INCLUDE_DIR /opt/homebrew/Cellar/sqlite/3.47.2/include)
-#include_directories(${BOOST_INCLUDEDIR} ${SQLite3_INCLUDE_DIR})
 include_directories(${BOOST_INCLUDEDIR} )
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
@@ -18,9 +18,6 @@ add_compile_options(-g -O0)
 
 find_package(Boost REQUIRED COMPONENTS filesystem date_time program_options )
 
-#set(SQLite3_LIBRARY_DIR /opt/homebrew/Cellar/sqlite/3.47.2/lib)
-#set(SQLite3_LIBRARY sqlite3.dll)
-#find_package(SQLite3 REQUIRED)
 pkg_check_modules(sqlite3 REQUIRED IMPORTED_TARGET sqlite3)
 # Set our project name
 project(${PROJECT_NAME})
@@ -30,5 +27,4 @@ file(GLOB SRCS "*.cpp" "*.c")
 
 # Define the executable
 add_executable(${PROJECT_NAME} ${SRCS})
-#target_link_libraries(${PROJECT_NAME} SQLite3 Boost::filesystem Boost::date_time Boost::program_options)
 target_link_libraries(${PROJECT_NAME} sqlite3 Boost::filesystem Boost::date_time Boost::program_options)
